ready for office hour

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -28,6 +28,9 @@ header {
     width: 20%;
     margin: 30px 23%; }
 
+tr {
+  cursor: pointer; }
+
 /*-- ANIMATIONS --*/
 .animate-view-container {
   position: relative;
